5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1667_2972.log
== TEST (2019-04-16 16:18:38) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
 print(s0)
-- ERROR:
File "XXXX", line 2
    print(s0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:46) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
print(s0)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:42) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
sob = s0 +(v * t)

s = 1000
if(sob >= s):
	print("Sim")

else:
	print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:13) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
sob = s0 +(v * t)

s = 1000
if(sob >= s):
	print("Sim")

else:
	print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:19) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t= int(input("tempo do deslocamento:"))
sob = s0 +(v * t)

s = 1000
if(sob >= s):
	print("Sim")

else:
	print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    t= int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:22) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
s = s0 +(v * t)

sp = 1000
if(s >= sp):
	print("Sim")

else:
	print("Nao")
		  
-- EXECUTION TIME:
0.208831
-- ERROR:
  File "/home/codebench/codes/1667/2972/main.py", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:40) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
s = s0 +(v * t)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:42) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
s = s0 +(v * t)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
		  
-- EXECUTION TIME:
0.176725
-- ERROR:
  File "/home/codebench/codes/1667/2972/main.py", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:43) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
t = int(input("tempo do deslocamento:"))
s = s0 +(v * t)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    t = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:32) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
x = int(input("tempo do deslocamento:"))
s = s0 +(v * x)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    x = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:27) 
-- CODE:
S0 = int(input("posicao inicial do objeto:"))
V = int(input("velocidade do objeto:")
T = int(input("tempo do deslocamento:"))
		  
S = S0 +(V * T)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
		  
-- ERROR:
File "XXXX", line 3
    T = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:29) 
-- CODE:
S0 = int(input("posicao inicial do objeto:"))
V = int(input("velocidade do objeto:")
T = int(input("tempo do deslocamento:"))
		  
S = S0 +(V * T)

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
-- ERROR:
File "XXXX", line 3
    T = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:57) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
		  
S = S0 + v

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
-- ERROR:
File "XXXX", line 4
    S = S0 + v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:06) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:")
		  
S = S0 + v

sp = 1000
if(s >= sp):
		  print("Sim")
else:
		  print("Nao")
-- ERROR:
File "XXXX", line 4
    S = S0 + v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:03) 
-- CODE:
s0 = 32
print(s0)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:15) 
-- CODE:
s0 = int(input("posicao inicial do objeto"))
print(s0)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:13) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
print(s0+v)

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:07) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))
print(s0+v+t)

-- OUTPUT:
147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:50) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
print(s)
-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:43) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
sp = 1000
if(s >= sp):
	print('Sim')
	
else:
	print('Nao')
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:59) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
sp = 1000
if(s >= sp):
	print('Sim')
	
else:
	print('Nao')
-- EXECUTION TIME:
0.140683
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:20) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
sp = 1000
if(s >= sp):
	print('Sim')
	
else:
	print('Nao')
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:00) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
print(s)
sp = 1000
if(s >= sp):
	print('Sim')
	
else:
	print('Nao')
-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:11) 
-- CODE:
s0 = int(input("posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo do deslocamento:"))

s= s0 + (v * t)
print(s)
sp = 1000
if(s >= sp):
	print('Sim')
	
else:
	print('Nao')
-- EXECUTION TIME:
0.222158
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
